--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,10 @@
+name: Jyoti kumari
+logo : "/progile.png?raw=true"
+description: Frontend Engineer<br>
+
+
+<br><br>
+
+<a href ="https://www.linkedin.com/in/jyoti-kumari-17b250194/">linkdin profile</a><br>
+
 theme: jekyll-theme-minimal
