--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: Jyoti kumari
-logo : "/progile.png?raw=true"
 description: Frontend Engineer<br>
 
+logo: https://github.com/profile.png?size200
 
 <br><br>
 
